<resources>
    <string name="app_name">Aplikasi Dicoding Event</string>

    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>

    <string name="appbar_favorite">Favorite Events</string>
    <string name="appbar_setting">Settings</string>
    <string name="appbar_home">Dicoding Events</string>
    <string name="appbar_upcoming">Upcoming Events</string>
    <string name="appbar_finished">Finished Events</string>

    <string name="todo">TODO</string>

    <string name="preview_event_title">IDCamp x Dicoding Live #1 - Beyond the Basics: Elevate Your Career as a Full Stack Developer in 2024</string>
    <string name="preview_event_summary">
        IDCamp x Dicoding Live 2024 edisi pertama ini akan kupas tuntas seputar Full Stack Developer.
    </string>

    <string name="fragment_detailed">Detailed</string>
    <string name="search">Search</string>

    <string name="emoji">o(TヘTo)</string>
    <string name="placeholder">Text Placeholder</string>

    <string name="start">Mulai:</string>
    <string name="done">Selesai:</string>
    <string name="quota">Sisa Quota:</string>
    <string name="search2">Search…</string>
    <string name="ke_acara">ke acara</string>

    <string name="dark_mode_description">Enable Dark Mode</string>
    <string name="dark_mode_description_disabled">Disable Dark Mode</string>
    <string name="title_daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_description">Enable Notification; will appear every day at %1$s</string>
    <string name="daily_reminder_description_reminded">Disable Notification; will appear every day at %1$s</string>
    <string name="title_dark_mode">Dark Mode</string>
</resources>