<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.aplikasi_dicoding_event_first.MainActivity">

    <group>
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"
            android:enabled="true"/>

        <item
            android:id="@+id/navigation_upcoming"
            android:icon="@drawable/baseline_developer_board_24"
            android:title="@string/title_upcoming"
            android:enabled="true"/>

        <item
            android:id="@+id/navigation_finished"
            android:icon="@drawable/baseline_developer_board_off_24"
            android:title="@string/title_finished"
            android:enabled="true"/>

        <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/title_favorite"
            android:enabled="true"/>

        <item
            android:id="@+id/navigation_setting"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/title_setting"
            android:enabled="true"/>
    </group>

</menu>