<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.aplikasi_dicoding_event_first.ui.home.HomeFragment"
        android:label="@string/appbar_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailedFragment"
            app:destination="@id/detailedFragment"
            app:enterAnim="@anim/fragment_in"
            app:exitAnim="@anim/fragment_out"
            app:popEnterAnim="@anim/fragment_pop_in"
            app:popExitAnim="@anim/fragment_pop_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.aplikasi_dicoding_event_first.ui.upcoming.UpcomingFragment"
        android:label="@string/appbar_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_detailedFragment"
            app:destination="@id/detailedFragment"
            app:enterAnim="@anim/fragment_in"
            app:exitAnim="@anim/fragment_out"
            app:popEnterAnim="@anim/fragment_pop_in"
            app:popExitAnim="@anim/fragment_pop_out" />
    </fragment>

    <fragment
        android:id="@+id/detailedFragment"
        android:name="com.example.aplikasi_dicoding_event_first.ui.detailed.DetailedFragment"
        android:label="@string/fragment_detailed"
        tools:layout="@layout/fragment_detailed" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.aplikasi_dicoding_event_first.ui.finished.FinishedFragment"
        android:label="@string/appbar_finished"
        tools:layout="@layout/fragment_finished" >
        <action
            android:id="@+id/action_navigation_finished_to_detailedFragment"
            app:destination="@id/detailedFragment"
            app:enterAnim="@anim/fragment_in"
            app:exitAnim="@anim/fragment_out"
            app:popEnterAnim="@anim/fragment_pop_in"
            app:popExitAnim="@anim/fragment_pop_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.aplikasi_dicoding_event_first.ui.favorite.FavoriteFragment"
        android:label="@string/appbar_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_detailedFragment"
            app:destination="@id/detailedFragment"
            app:enterAnim="@anim/fragment_in"
            app:exitAnim="@anim/fragment_out"
            app:popEnterAnim="@anim/fragment_pop_in"
            app:popExitAnim="@anim/fragment_pop_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.aplikasi_dicoding_event_first.ui.settings.SettingsFragment"
        android:label="@string/appbar_setting"
        tools:layout="@layout/fragment_settings" />
</navigation>